@@ -45,14 +45,14 @@ public record ParticleMotionCollision(
 ) implements IParticleComponent {
     public static final ResourceLocation ID = ResourceLocation.withDefaultNamespace("particle_motion_collision");
     public static final Codec<ParticleMotionCollision> CODEC = RecordCodecBuilder.create(instance -> instance.group(
-            BoolMolangExp.CODEC.lenientOptionalFieldOf("enabled", BoolMolangExp.TRUE).forGetter(ParticleMotionCollision::enabled),
-            Codec.FLOAT.lenientOptionalFieldOf("collision_drag", 0.0F).forGetter(ParticleMotionCollision::collisionDrag),
-            Codec.FLOAT.lenientOptionalFieldOf("coefficient_of_restitution", 0.0F).forGetter(ParticleMotionCollision::coefficientOfRestitution),
-            Codec.FLOAT.lenientOptionalFieldOf("collision_radius", 0.0F).forGetter(ParticleMotionCollision::collisionRadius),
-            Codec.BOOL.lenientOptionalFieldOf("expire_on_contact", false).forGetter(ParticleMotionCollision::expireOnContact),
+            BoolMolangExp.CODEC.optionalFieldOf("enabled", BoolMolangExp.TRUE).forGetter(ParticleMotionCollision::enabled),
+            Codec.FLOAT.optionalFieldOf("collision_drag", 0.0F).forGetter(ParticleMotionCollision::collisionDrag),
+            Codec.FLOAT.optionalFieldOf("coefficient_of_restitution", 0.0F).forGetter(ParticleMotionCollision::coefficientOfRestitution),
+            Codec.FLOAT.optionalFieldOf("collision_radius", 0.0F).forGetter(ParticleMotionCollision::collisionRadius),
+            Codec.BOOL.optionalFieldOf("expire_on_contact", false).forGetter(ParticleMotionCollision::expireOnContact),
             Codec.either(Event.CODEC, Codec.list(Event.CODEC)).xmap(
                     either -> either.map(Collections::singletonList, Function.identity()),
-                    l -> l.size() == 1 ? Either.left(l.getFirst()) : Either.right(l)
+                    l -> l.size() == 1 ? Either.left(l.get(0)) : Either.right(l)
             ).fieldOf("events").orElseGet(List::of).forGetter(ParticleMotionCollision::events)
     ).apply(instance, ParticleMotionCollision::new));
 
