@@ -12,7 +12,7 @@ public record FloatMolangExpList(int size, List<FloatMolangExp> expressions) {
     public static final FloatMolangExpList EMPTY = new FloatMolangExpList(0, List.of());
     public static final Codec<FloatMolangExpList> CODEC = Codec.either(FloatMolangExp.CODEC, Codec.list(FloatMolangExp.CODEC)).xmap(
             either -> either.map(e -> new FloatMolangExpList(1, Collections.singletonList(e)), l -> new FloatMolangExpList(l.size(), l)),
-            list -> list.size() == 1 ? Either.left(list.expressions.getFirst()) : Either.right(list.expressions)
+            list -> list.size() == 1 ? Either.left(list.expressions.get(0)) : Either.right(list.expressions)
     );
 
     public FloatMolangExpList {
